Add new steps in Dspace-in-docker file